kube/dev/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  name: pci
  labels:
    name: pci
    service: pci
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pci
      service: pci
  template:
    metadata:
      labels:
        name: pci
        service: pci
    spec:
      containers:
        - args:
            - ./run.sh
          command:
            - sh
          image: quay.io/ukhomeofficedigital/postcodeinfo:${DRONE_COMMIT_SHA}
          imagePullPolicy: Always
          name: pci
          ports:
            - containerPort: 10080
              protocol: TCP
            - containerPort: 10443
              protocol: TCP
          resources:
            limits:
              cpu: 600m
              memory: 512Mi
            requests:
              cpu: 60m
              memory: 128Mi
          securityContext:
            runAsNonRoot: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
